--- a/source/dashboard.html
+++ b/source/dashboard.html
@@ -212,8 +212,11 @@
       // --- Utilidades de cifrado AES global ---
       let globalAesKey = null;
 
+      // Reemplaza <TU_BACKEND> con el dominio real de tu backend en Render, ej. chat-app-backend-3h74.onrender.com
+      const BACKEND_URL = "https://<TU_BACKEND>.onrender.com"; // Cambia por tu URL real de Render
+
       async function getGlobalAesKey() {
-        const res = await fetch("/api/get-global-aes");
+        const res = await fetch(BACKEND_URL + "/api/get-global-aes");
         const data = await res.json();
         if (!data.key) {
           alert("No se pudo obtener la clave AES global.");
@@ -266,8 +269,9 @@
         }
       }
 
-      const socket = io("/api", {
+      const socket = io(BACKEND_URL + "/api", {
         transports: ["polling"],
+        withCredentials: true
       });
 
       const userEmail = localStorage.getItem("user_email");
@@ -361,7 +365,7 @@
         };
       }
       async function deleteChat(contactEmail) {
-        const res = await fetch("/api/delete-chat", {
+        const res = await fetch(BACKEND_URL + "/api/delete-chat", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ user1: userEmail, user2: contactEmail }),
@@ -376,7 +380,7 @@
       }
       async function checkUnreadMessages() {
         try {
-          const res = await fetch("/api/get-contacts", {
+          const res = await fetch(BACKEND_URL + "/api/get-contacts", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email: userEmail }),
@@ -386,7 +390,7 @@
           const contacts = data.contacts;
 
           for (const contact of contacts) {
-            const chatRes = await fetch("/api/get-messages", {
+            const chatRes = await fetch(BACKEND_URL + "/api/get-messages", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({
@@ -415,7 +419,7 @@
         sent.innerHTML = "<li>Cargando...</li>";
 
         try {
-          const res1 = await fetch("/api/get-requests", {
+          const res1 = await fetch(BACKEND_URL + "/api/get-requests", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email: userEmail }),
@@ -437,7 +441,7 @@
             });
           }
 
-          const res2 = await fetch("/api/get-sent-requests", {
+          const res2 = await fetch(BACKEND_URL + "/api/get-sent-requests", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email: userEmail }),
@@ -465,7 +469,7 @@
       }
 
       async function respondRequest(email, accepted) {
-        const res = await fetch("/api/respond-request", {
+        const res = await fetch(BACKEND_URL + "/api/respond-request", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
@@ -481,7 +485,7 @@
       }
 
       async function cancelRequest(toEmail) {
-        const res = await fetch("/api/cancel-request", {
+        const res = await fetch(BACKEND_URL + "/api/cancel-request", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ from_email: userEmail, to_email: toEmail }),
@@ -531,7 +535,7 @@
         };
       }
       function respondRequest(requesterEmail, accepted) {
-        fetch("/api/respond-request", {
+        fetch(BACKEND_URL + "/api/respond-request", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
@@ -553,7 +557,7 @@
       }
 
       function cancelRequest(toEmail) {
-        fetch("/api/cancel-request", {
+        fetch(BACKEND_URL + "/api/cancel-request", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ from_email: userEmail, to_email: toEmail }),
@@ -577,7 +581,7 @@
         }
 
         try {
-          const res = await fetch("/api/send-request", {
+          const res = await fetch(BACKEND_URL + "/api/send-request", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
@@ -600,7 +604,7 @@
         const list = document.getElementById("contactList");
         list.innerHTML = "";
         try {
-          const res = await fetch("/api/get-contacts", {
+          const res = await fetch(BACKEND_URL + "/api/get-contacts", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email: userEmail }),
@@ -642,7 +646,7 @@
             list.appendChild(li);
 
             // ⏳ Verifica mensajes no leídos
-            const badgeRes = await fetch("/api/get-messages", {
+            const badgeRes = await fetch(BACKEND_URL + "/api/get-messages", {
               method: "POST",
               headers: { "Content-Type": "application/json" },
               body: JSON.stringify({ user1: userEmail, user2: contactEmail }),
@@ -665,7 +669,7 @@
 
       async function removeContact(contactEmail) {
         try {
-          const res = await fetch("/api/remove-contact", {
+          const res = await fetch(BACKEND_URL + "/api/remove-contact", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
@@ -704,7 +708,7 @@
         clearNotificationBadge(email);
 
         // Marcar mensajes como leídos
-        fetch("/api/mark-read", {
+        fetch(BACKEND_URL + "/api/mark-read", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ user1: userEmail, user2: email }),
@@ -730,7 +734,7 @@
 
       async function fetchContactName(email) {
         try {
-        const res = await fetch("/api/get-contacts", {
+        const res = await fetch(BACKEND_URL + "/api/get-contacts", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email: userEmail }),
@@ -755,20 +759,7 @@
         container.appendChild(el);
       }
 
-      async function deleteChat(contactEmail) {
-        const res = await fetch("/api/delete-chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ user1: userEmail, user2: contactEmail }),
-        });
-
-        const result = await res.json();
-        if (res.ok) {
-          showAlert("Historial de chat eliminado.");
-        } else {
-          showAlert(result.error || "No se pudo eliminar el chat.");
-        }
-      }
+      // (Ya implementado arriba, no es necesario aquí)
       function showAlert(msg) {
         const modal = document.getElementById("customAlert");
         document.getElementById("alertText").textContent = msg;
@@ -850,7 +841,7 @@
         }
 
         try {
-          const res = await fetch("/api/update-profile", {
+          const res = await fetch(BACKEND_URL + "/api/update-profile", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
@@ -918,7 +909,7 @@
         const list = document.getElementById("groupList");
         list.innerHTML = "<li>Cargando...</li>";
         try {
-          const res = await fetch("/api/get-groups", {
+          const res = await fetch(BACKEND_URL + "/api/get-groups", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email: userEmail }),
@@ -950,7 +941,7 @@
         const modal = document.getElementById("addMembersModal");
         const select = document.getElementById("addMembersSelect");
         // Carga contactos que no están ya en el grupo
-        fetch("/api/get-groups", {
+        fetch(BACKEND_URL + "/api/get-groups", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ email: userEmail }),
@@ -958,7 +949,7 @@
         .then(res => res.json())
         .then(data => {
           const group = data.groups.find(g => g.id === groupId);
-          fetch("/api/get-contacts", {
+          fetch(BACKEND_URL + "/api/get-contacts", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email: userEmail }),
@@ -995,7 +986,7 @@
         const select = document.getElementById("addMembersSelect");
         const members = Array.from(select.options).filter(opt => opt.selected).map(opt => opt.value);
         if (!members.length) return;
-        fetch("/api/add-group-members", {
+        fetch(BACKEND_URL + "/api/add-group-members", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ group_id: currentAddGroupId, new_members: members }),
@@ -1013,7 +1004,7 @@
         const select = document.getElementById("groupMembersSelect");
         select.innerHTML = "";
         try {
-          const res = await fetch("/api/get-contacts", {
+          const res = await fetch(BACKEND_URL + "/api/get-contacts", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ email: userEmail }),
@@ -1054,7 +1045,7 @@
         // Incluye al creador
         members.push(userEmail);
         try {
-          const res = await fetch("/api/create-group", {
+          const res = await fetch(BACKEND_URL + "/api/create-group", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({ name, members }),
@@ -1084,7 +1075,7 @@
       }
 
       async function loadGroupChatHistory(groupId) {
-        const res = await fetch("/api/get-group-messages", {
+        const res = await fetch(BACKEND_URL + "/api/get-group-messages", {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ group_id: groupId }),
